# dc_leaderboard

./: .gitignore  Makefile  README-conda.md  README.md  _quarto.yml  about.qmd  activate_env.sh  create_fake_results.py  environment.yml  leaderboard.qmd  pyproject.toml  test_api.py
dcleaderboard/: Makefile  Makefile.conda  __init__.py  _quarto.yml  build.py  environment.yml  gen_noisy_results.py  gen_per_bins_latlon.py  generate_leaderboard.py  html_builder.py  leaderboard.qmd  map_builder.py  map_processing.py  processing.py  run_local.py  styles.css
dcleaderboard/config/: leaderboard_texts.yaml
dcleaderboard/results/: leaderboard_config.yaml  results_challenger_model_1.json  results_challenger_model_2.json  results_glonet.json
dcleaderboard/results/dc1/: results_challenger_model_1.json  results_challenger_model_2.json  results_glonet.json
dcleaderboard/results/dc2/: results_challenger_model_1.json  results_challenger_model_2.json  results_glonet.json
results/: method_a.json  method_b.json  method_c.json
